# the-jira-mcp

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  JIRA_MCP_USAGE.md  MAINTENANCE.md  Makefile  README.md  SECURITY.md  TESTING_SUMMARY.md  bandit-report.json  knowledge_store.yaml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
docs/: CI_PRECOMMIT_SYNC.md  SECURITY.md
docs/testing/: README.md  jira_auth_tests.sh  setup_testing.sh  test_mcp_client.py
examples/: claude_desktop_config.json  cursor_settings.json
integration-tests/: MCP_CLIENT_TESTING.md
roadmap/: best-practices.md  hld-tasks.md  hld.md
scripts/: analyze_ci_sync.py  check_ci_precommit_sync.sh  check_credentials.py  ci_precommit_compare.py  full_security_scan.py  sync_dependencies.py
src/jira_mcp_server/: __init__.py  cli.py  config.py  jira_client.py  knowledge_store.py  mcp_server.py
tests/: __init__.py  test_cli.py  test_config.py  test_jira_client.py  test_knowledge_store.py  test_mcp_server.py  test_server.py
